# binstock

./: LICENSE  README.md  flake.nix
utils/manifest/: README.md  default.nix  meson.build  meson_options.txt  shell.nix
utils/manifest/data/completions/bash/: manifest
utils/manifest/data/completions/zsh/: _manifest
utils/manifest/data/man/man1/: manifest.1
utils/manifest/src/: manifest.sh
utils/manifest/tests/: integration.bats  test_helper.bash
utils/swapshot/: CHANGELOG.md  README.md  default.nix  meson.build  shell.nix
utils/swapshot/data/completions/bash/: swapshot
utils/swapshot/data/completions/zsh/: _swapshot
utils/swapshot/data/man/man1/: swapshot.1
utils/swapshot/src/: swapshot.sh
utils/swapshot/tests/: args_parsing.bats  integration.bats  notification.bats  process_capture.bats  test_helper.bash  validation.bats
utils/swapshot/tests/mocks/: notify-send  slurp  swappy  wl-copy
